EXTRA update usage of java api new in jdk17+